TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_after.dot
digraph AST {
  "128884247696320" [label="Start"];
  "128884247696320" -> "128884247699968";
  "128884247699968" [label="Code"];
  "128884247699968" -> "128884247700112";
  "128884247700112" [label="Function"];
  "128884247700112" -> "128884247700208";
  "128884247700112" -> "128884247700256";
  "128884247700112" -> "128884247700304";
  "128884247700208" [label="main IDENTIFIER"];
  "128884247700256" [label="Parameters"];
  "128884247700304" [label="Code"];
  "128884247700304" -> "128884247700400";
  "128884247700304" -> "128884247700448";
  "128884247700400" [label="Code"];
  "128884247700400" -> "128884247700496";
  "128884247700496" [label="Declaration"];
  "128884247700496" -> "128884247700592";
  "128884247700496" -> "128884247700640";
  "128884247700592" [label="x IDENTIFIER"];
  "128884247700640" [label="1 INT"];
  "128884247700448" [label="Code"];
  "128884247700448" -> "128884247700688";
  "128884247700688" [label="Declaration"];
  "128884247700688" -> "128884247700784";
  "128884247700688" -> "128884247700832";
  "128884247700784" [label="x IDENTIFIER"];
  "128884247700832" [label="2 INT"];
}
